--- a/desafios/FizzBuzz.ipynb
+++ b/desafios/FizzBuzz.ipynb
@@ -10,21 +10,16 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3.8.5 32-bit",
+      "metadata": {
+        "interpreter": {
+          "hash": "0a56bb0aee5eb05ae72e926ab6746c882f366f48b46332e0137faf4ae8ed8eec"
+        }
+      }
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mabittar/desafios_pythonicos/blob/master/FizzBuzz.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -114,9 +109,7 @@
       "metadata": {
         "id": "fz9Waxx_45wF"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
